--- a/lesson/demo1.html
+++ b/lesson/demo1.html
@@ -57,8 +57,8 @@
         g_near:1.0,
         g_far:1000.0
     };
-    var width = document.documentElement.clientWidth;
-    var height = document.documentElement.clientHeight;
+    var width = window.innerWidth;
+    var height = window.innerHeight;
 
     window.onload = function(){
         createWorld();
