文件重命名

--- a/lesson/demo1.html
+++ b/lesson/demo1.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <canvas id="webgl"></canvas>
-<script src="../lib/combine.js"></script>
+<script src="../lib/compile.js"></script>
 <script src="../lib/matrix4.js"></script>
 
 <!-- 片元着色器程序 -->
