正方体锯齿测试

--- a/test/t0.html
+++ b/test/t0.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>普通正方体</title>
+        <title>threejs 普通正方体</title>
         <script type="text/javascript" src="../threejs/three.js"></script>
         <link rel="stylesheet" href="../reset.import.css">
         <style type="text/css">
@@ -60,7 +60,7 @@
             //创建光线
             var light;
             function initLight() {
-            	light = new THREE.AmbientLight(0xfefefe);
+            	light = new THREE.AmbientLight(0xffffff);
 				scene.add(light);
             }
 
