--- a/test/t1.html
+++ b/test/t1.html
@@ -60,8 +60,6 @@
         g_near:1.0,
         g_far:1500.0
     };
-    var width = window.innerWidth*2;
-    var height = window.innerHeight*2;
 
     window.onload = function(){
         createWorld();
@@ -76,6 +74,8 @@
         render(gl,num,shaderProgram,cameraMatrix);//渲染
     }
 
+    var width = window.innerWidth*window.devicePixelRatio;//设备像素比
+    var height = window.innerHeight*window.devicePixelRatio;
     function initRender(){
         var canvas = document.querySelector('#retina');
         canvas.width = width;
