--- a/share/v0.html
+++ b/share/v0.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <title>分享示例v0</title>
+        <meta name="viewport"
+          content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no,viewport-fit=cover ">
         <script type="text/javascript" src="../threejs/three.js"></script>
         <link rel="stylesheet" href="../reset.import.css">
         <style type="text/css">
