--- a/test/t1.html
+++ b/test/t1.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>WebGL 普通正方体</title>
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no,viewport-fit=cover ">
     <link rel="stylesheet" href="../reset.import.css">
 </head>
 <body>
