--- a/test/t0.html
+++ b/test/t0.html
@@ -4,6 +4,8 @@
         <meta charset="UTF-8">
         <title>threejs 普通正方体</title>
         <script type="text/javascript" src="../threejs/three.js"></script>
+        <meta name="viewport"
+          content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no,viewport-fit=cover ">
         <link rel="stylesheet" href="../reset.import.css">
         <style type="text/css">
             div#canvas-frame {
